--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ header.sticky {
     position: absolute;
     top: 100%;
     right: -100%;
-    width: 300px;
+    width: 100%;
     height: 100vh;
     background: var(--main-color);
     display: flex;
