--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ header.sticky {
 
   .navbar {
     position: absolute;
-    top: 100%;
+    top: 95%;
     right: -100%;
     width: 100%;
     height: 100vh;
@@ -160,32 +160,38 @@ section {
   font-weight: 500;
   margin-bottom: 48px;
 }
-.latter form {
-  width: 100%;
-  max-width: 460px;
-  position: relative;
-}
-.latter form input:first-child {
-  display: inline-block;
-  width: 100%;
-  outline: none;
-  padding: 16px 140px 16px 15px;
+
+.latter{
+  width: 70%;
+  display: flex;
+  justify-content: space-between;
   border: 2px solid var(--main-color);
+  background-color: var(--bg-color);
   border-radius: 30px;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  -ms-border-radius: 30px;
+  -o-border-radius: 30px;
 }
-.latter form input:last-child {
-  position: absolute;
-  display: inline-block;
+
+.latter input:first-child{
+  background-color: transparent;
+  padding: 16px 40px;
   border: none;
+  border-radius: 30px;
   outline: none;
+}
+
+.latter input:last-child{
   background: var(--main-color);
   color: var(--bg-color);
-  padding: 16px 40px;
+  border: none;
+  outline: none;
   border-radius: 30px;
+  padding: 16px 40px;
   cursor: pointer;
-  top: 2px;
-  right: 1px;
 }
+
 .home-img img {
   height: auto;
   width: 100%;
