--- a/style.css
+++ b/style.css
@@ -188,9 +188,13 @@ section {
   color: var(--bg-color);
   border: none;
   outline: none;
-  border-radius: 30px;
   cursor: pointer;
   width: 35%;
+  border-radius:30px;
+  -webkit-border-radius:30px;
+  -moz-border-radius:30px;
+  -ms-border-radius:30px;
+  -o-border-radius:30px;
 }
 
 .home-img img {
